changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Apply patch #3428070: Autoreconf Warnings, by Steven Johnson.
It is for 'client', but fixes the same bug on server.
Nicolas Weeger 2011-10-27

Fix bug #2005689: 2.0 Creator creates items with duplicate names.
Have creator objects clear the title instead of setting both it and the name.
Nicolas Weeger 2011-10-22

Fix invalid expression.
Nicolas Weeger 2011-10-21

Add sys/socket.h to includes, since newserver.h needs it on some systems, and
every file includes that.  Remove it from files which previously included it,
since includes.h takes care of that now.
MSW 2011-10-08

Fix face issue with artifacts, eg gems.
Nicolas Weeger 2011-09-24

Fix account-related potential crashes.
Nicolas Weeger 2011-09-12

Remove curl/types.h include, which is obsolete.
Nicolas Weeger 2011-09-10

Enable server to listen to IPV6 ports, as well as IPV4.
Maurice Massar 2011-09-10

Relax check for valid listening ports to allow 1..65535.
Andreas Kirschbaum 2011-09-08

Fix experience for cure disease going to invalid skill (lockpicking for instance).
Nicolas Weeger 2011-08-14

Fix crash when a spellbook a player is reading gets identified, merges and
thus changes.
Nicolas Weeger 2011-08-13

Enable altars to have a special animation when there is a god intervention.
Nicolas Weeger 2011-08-11

Inform player of changes in wc, ac and speed.
Nicolas Weeger 2011-08-07

Update character speed and other attributes when consuming items from
inventory.
Andreas Kirschbaum 2011-08-05

Correctly display changes due to 'bless' spell. Add spell expiry.
Nicolas Weeger 2011-08-04
