@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Improve artifact support.
+Add an 'artifact' field to 'object', that is saved and loaded, to keep trace
+of what (optional) artifact an item was created with.
+This enables artifact modifications on existing items.
+Nicolas Weeger 2011-11-01
+
 Apply patch #3428070: Autoreconf Warnings, by Steven Johnson.
 It is for 'client', but fixes the same bug on server.
 Nicolas Weeger 2011-10-27
